<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/please_do_that"
            style="@style/Widget.CookingConverter.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_do_that"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/product_name_widget"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/product_name_widget"
            app:srcCompat="@drawable/ic_product_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/product_name_widget"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/icon_margin_text"
            android:layout_marginTop="@dimen/margin_between_sections"
            android:completionThreshold="1"
            app:layout_constraintStart_toEndOf="@id/icon_product_name"
            app:layout_constraintTop_toBottomOf="@id/please_do_that">

            <AutoCompleteTextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:inputType="textAutoComplete" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_measurement_value_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/measurement_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/measurement_value"
            app:srcCompat="@drawable/ic_measurement_value_title" />

        <TextView
            android:id="@+id/measurement_value"
            style="@style/Widget.CookingConverter.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_margin_Horizontal"
            android:layout_marginTop="@dimen/margin_between_sections"
            android:text="@string/measurement_value"
            app:layout_constraintStart_toEndOf="@id/icon_measurement_value_title"
            app:layout_constraintTop_toBottomOf="@id/product_name_widget">

        </TextView>

        <RadioGroup
            android:id="@+id/measurement_value_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margin_between_sections"
            app:layout_constraintStart_toStartOf="@id/measurement_value"
            app:layout_constraintTop_toBottomOf="@id/measurement_value">

            <RadioButton
                android:id="@+id/weight_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight" />

            <RadioButton
                android:id="@+id/volume_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_margin_Horizontal"
                android:text="@string/volume" />
        </RadioGroup>


        <ImageView
            android:id="@+id/icon_measurement_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/quantity_widget"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/quantity_widget"
            app:srcCompat="@drawable/ic_measurement_value" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quantity_widget"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/icon_margin_text"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:hint="@string/quantity"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toEndOf="@id/icon_measurement_value"
            app:layout_constraintTop_toBottomOf="@id/measurement_value_options">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/measurement_unit_widget"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_margin_Horizontal"
            android:layout_marginTop="8dp"
            android:completionThreshold="1"
            app:layout_constraintStart_toEndOf="@id/quantity_widget"
            app:layout_constraintTop_toBottomOf="@id/measurement_value_options">

            <AutoCompleteTextView
                android:id="@+id/measurement_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/measurement_unit"
                android:inputType="textAutoComplete" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/convert_into"
            style="@style/Widget.CookingConverter.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_sections"
            android:text="@string/convert_into"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantity_widget" />

        <ImageView
            android:id="@+id/icon_convert_into"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/conversion_unit_widget"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/conversion_unit_widget"
            app:srcCompat="@drawable/ic_convert_into" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/conversion_unit_widget"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/icon_margin_text"
            android:layout_marginTop="8dp"
            android:completionThreshold="1"
            android:minHeight="@dimen/min_text_height"
            app:layout_constraintStart_toEndOf="@id/icon_convert_into"
            app:layout_constraintTop_toBottomOf="@id/convert_into">

            <AutoCompleteTextView
                android:id="@+id/conversion_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/conversion_unit"
                android:inputType="textAutoComplete" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up"
            style="@style/Widget.CookingConverter.CompoundButton.Switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_sections"
            android:checked="true"
            android:text="@string/round_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/conversion_unit_widget" />

        <Button
            android:id="@+id/convert_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_sections"
            android:text="@string/convert_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/round_up" />

        <TextView
            android:id="@+id/result_text"
            style="@style/Widget.CookingConverter.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_sections"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/convert_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>